--- a/index.html
+++ b/index.html
@@ -5682,10 +5682,7 @@
                                   Supply : 10M  
                                 </p>
                                 <p style="color: #fff; font-size: 23px">
-                                  Tax : 5/5
-                                </p>
-                                <p style="color: #fff; font-size: 23px">
-                                  5% token for marketing
+                                  Tax : 0
                                 </p>
                               </div>
                             </div>
