--- a/index.html
+++ b/index.html
@@ -5898,8 +5898,7 @@
                             >
                               <div class="elementor-widget-container">
                                 <p>
-                                  Join our Community and follow Our Socials.<br />For
-                                  any queries, please email us at<br /><br />
+                                  Join our Community and follow Our Socials.<br /><br />
                                 </p>
                               </div>
                             </div>
