--- a/index.html
+++ b/index.html
@@ -5665,7 +5665,7 @@
                             >
                               <div class="elementor-widget-container">
                                 <p style="color: #fff; font-size: 23px">
-                                  Supply : 10M  
+                                  Supply : 1B  
                                 </p>
                                 <p style="color: #fff; font-size: 23px">
                                   Tax : 0
@@ -5789,7 +5789,7 @@
                                           >
                                             <span
                                               class="elementor-progress-text"
-                                              >10M</span
+                                              >1B</span
                                             >
                                             <span
                                               class="elementor-progress-percentage"
@@ -5981,25 +5981,25 @@
                                   <!--uc_container_holder-->
                                   <div class="uc_social-buttons">
                                     <a
-                                      href="twitterlink"
+                                      href="https://twitter.com/PoodleOnSOL"
                                       class="uc_social-button"
                                       target="_blank"
                                       ><i class="fab fa-twitter"></i
                                     ></a>
                                     <a
-                                      href="tglink"
+                                      href="https://t.me/POODLEsolana"
                                       class="uc_social-button"
                                       target="_blank"
                                       ><i class="fab fa-telegram"></i
                                     ></a>
                                     <!-- <a
-                                      href="tglink"
+                                      href="https://t.me/POODLEsolana"
                                       class="uc_social-button"
                                       target="_blank"
                                       ><i class="fab fa-discord"></i
                                     ></a>
                                     <a
-                                      href="twitterlink"
+                                      href="https://twitter.com/PoodleOnSOL"
                                       class="uc_social-button"
                                       target="_blank"
                                       ><i class="fab fa-twitter"></i
